# fast-english

./: .gitignore  README.md  anki_cards.txt  extarct_words.ipynb  feets_tkinter.ipynb  func_add_funcionalidades_in_vocabulario.ipynb  hangman_game_log.csv  new_feets.ipynb  puzzle.ipynb  pyproject.toml  requirements.txt  show_sentences.py  tasks.db  text.txt  text_mairo.txt  vocabulary_builder.ipynb  vocabulary_builder.py  words_oxford_levels.csv  words_oxford_pdf.txt
app/: main.py  run_app.ipynb
app/HangmanGame/: hangman_game_log.csv  main.ipynb
app/extract_imgs/: baixar_dados_duolingo.ipynb  duome_vocabulary.csv  extract_img_to_pdf.ipynb  extract_imgs_to_raw.ipynb  func_add_words_in_vocabulario.ipynb  new_games.ipynb
app/extract_imgs/new_features/: foco_em_certas_palavras.ipynb  generate_statistc.ipynb
app/game_color/: main.py
app/games/: menu_games copy.py  menu_games.py
app/games/game_color/: main.ipynb
app/games/hangman_game/: main.ipynb  main.py  most_words.ipynb  word_shuffle_game.ipynb
app/games/phrase_translator/: show_sentences copy.py
app/hangman_game/: main.ipynb  main.py
app/model/: vocabulary_model.py
app/phrase_translator/: read_text.ipynb  show_sentences.py
app/stats_words/: analyzer.py  dashboard.py
app/text_challenge/: main.py
app/toolkit/: check_mod_file.ipynb  compact_files.ipynb
app/utils/: data_loader.py  game_timer.py  save_data.py  score.py  toolkit.py
app/vocabulary_builder/: run_app.ipynb  vocabulary_builder.ipynb  vocabulary_builder.py
app/vocabulary_game/: main.py  run_app.ipynb
beautfull_tk/: beautfull_tk.ipynb
data/animals/: birds.json  mammals.json
data/fruits/: tropical.json
database/csv/: words_oxford_levels_2.csv
database/infos/: game.csv  game_data_hangman.csv  game_data_teste_1.csv  game_data_word_shuffle_game.csv
database/vocabulary/: study_word_list.json
extract_data_video/: extract.ipynb  game.ipynb  organize.ipynb
gui/: learn.ipynb
gui/data/: tabela_vazao_x_pressao_48h.xlsx  tabela_vazao_x_pressao_48h_2.xlsx
trash/: feets_tkinter.ipynb  game_data_.csv  game_data_teste_1.csv
(+2134 files in other folders)
