[tool.poetry]
name = "fast-english"
version = "0.1.0"
description = ""
authors = ["guilhermebranddao <guilhermebranddao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
taskipy = "^1.14.1"
isort = "^5.13.2"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = """
isort .
black .
"""

run = "uvicorn app.main:app --reload"
run_in_prod = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
run_etl = "python app/etl/main.py"
test = "pytest -v --disable-warnings"
kill = "kill -9 $(lsof -t -i:8000)"
freeze_req = "pip freeze >> requirements.txt"
freeze_req_dev = "pip freeze >> requirements-dev.txt"

generate-migration = "alembic revision --autogenerate -m 'initial migration'"
apply-migration = "alembic upgrade head"